syntax = "proto3";

package telemetry.v1;
option go_package = "github.com/your-org/your-repo/proto/telemetry/v1;telemetryv1";

/*
  Простой пер-сэмпл поток:
  — время (ts_ms),
  — значение (value),
  — какая метрика (metric: FHR или UC).
*/

service DataService {
  // Клиент (эмулятор) шлёт по одному сэмплу; сервер периодически отвечает Ack.
  rpc PushSamples(stream Sample) returns (stream Ack);
}

enum Metric {
  METRIC_UNSPECIFIED = 0;
  METRIC_FHR = 1;  // FHR — частота сердечных сокращений плода (bpm)
  METRIC_UC  = 2;  // UC  — маточные сокращения (отн. ед. или мм рт. ст.)
}

message Sample {
  string session_id = 1;  // Идентификатор сессии (строка/UUID)
  uint64 ts_ms      = 2;  // Время измерения в миллисекундах (Unix epoch)
  Metric metric     = 3;  // Какая метрика: FHR или UC
  float  value      = 4;  // Значение измерения
}

message Ack {
  string session_id   = 1;  // Для какой сессии подтверждение
  uint64 received_cnt = 2;  // Сколько сэмплов принято с начала соединения/сессии
}